--- a/RankFit/Exercise/DoExercise/DoExercise.storyboard
+++ b/RankFit/Exercise/DoExercise/DoExercise.storyboard
@@ -204,7 +204,7 @@
                                 <rect key="frame" x="0.0" y="47" width="390" height="763"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6xw-Cz-XE8">
-                                        <rect key="frame" x="0.0" y="0.0" width="390" height="50"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="390" height="40"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="목표거리" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VsE-p2-MPe">
                                                 <rect key="frame" x="213" y="15" width="59" height="21"/>
@@ -221,27 +221,27 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="AerobicEx" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="311-1s-eIZ">
-                                                <rect key="frame" x="8" y="5" width="164" height="40"/>
+                                                <rect key="frame" x="33" y="5" width="124" height="30"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="33"/>
+                                                <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="25"/>
                                                 <color key="textColor" systemColor="linkColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                         </subviews>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="50" id="qHm-QK-mBj"/>
+                                            <constraint firstAttribute="height" constant="40" id="qHm-QK-mBj"/>
                                         </constraints>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7o2-Uz-6Bd">
-                                        <rect key="frame" x="0.0" y="50" width="390" height="450"/>
+                                        <rect key="frame" x="0.0" y="40" width="390" height="400"/>
                                         <subviews>
                                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsUserLocation="YES" translatesAutoresizingMaskIntoConstraints="NO" id="dD4-jv-bv9">
-                                                <rect key="frame" x="0.0" y="0.0" width="390" height="450"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="390" height="400"/>
                                                 <standardMapConfiguration key="preferredConfiguration"/>
                                             </mapView>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ult-eJ-kKJ">
-                                                <rect key="frame" x="350" y="380" width="40" height="40"/>
+                                                <rect key="frame" x="350" y="330" width="40" height="40"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" secondItem="ult-eJ-kKJ" secondAttribute="height" multiplier="1:1" id="Ino-Y5-qig"/>
                                                     <constraint firstAttribute="width" constant="40" id="PwJ-cK-WIR"/>
@@ -263,12 +263,12 @@
                                             <constraint firstAttribute="trailing" secondItem="ult-eJ-kKJ" secondAttribute="trailing" id="RgH-N4-gyg"/>
                                             <constraint firstAttribute="bottom" secondItem="dD4-jv-bv9" secondAttribute="bottom" id="jeI-8c-vpy"/>
                                             <constraint firstAttribute="bottom" secondItem="ult-eJ-kKJ" secondAttribute="bottom" constant="30" id="r8O-gV-hC8"/>
-                                            <constraint firstAttribute="height" constant="450" id="vri-4u-Hxy"/>
+                                            <constraint firstAttribute="height" constant="400" id="vri-4u-Hxy"/>
                                             <constraint firstItem="dD4-jv-bv9" firstAttribute="top" secondItem="7o2-Uz-6Bd" secondAttribute="top" id="y3d-Bd-oop"/>
                                         </constraints>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="iOr-Rx-lXG">
-                                        <rect key="frame" x="0.0" y="500" width="390" height="263"/>
+                                        <rect key="frame" x="0.0" y="440" width="390" height="323"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="이동거리: 0km" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4MC-tT-m7i">
                                                 <rect key="frame" x="8" y="24" width="172" height="21"/>
@@ -292,7 +292,7 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ve8-29-XW3">
-                                                <rect key="frame" x="165.66666666666666" y="186.33333333333337" width="58.666666666666657" height="56.666666666666657"/>
+                                                <rect key="frame" x="165.66666666666666" y="246.33333333333334" width="58.666666666666657" height="56.666666666666657"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="30"/>
                                                 <color key="tintColor" systemColor="labelColor"/>
                                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
@@ -300,12 +300,29 @@
                                                     <imageReference key="image" image="stop.circle" catalog="system" renderingMode="template"/>
                                                     <preferredSymbolConfiguration key="preferredSymbolConfiguration" configurationType="pointSize" pointSize="50"/>
                                                 </state>
+                                                <connections>
+                                                    <action selector="saveExercise:" destination="z04-Os-EIl" eventType="touchUpInside" id="g0r-O2-2Ze"/>
+                                                </connections>
                                             </button>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="00 : 00 : 00" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ss3-qA-jdg">
                                                 <rect key="frame" x="8" y="82" width="172" height="21"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="25"/>
                                                 <color key="textColor" red="0.2117120186" green="0.70902019989999998" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="고도" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mN2-Mv-UCG">
+                                                <rect key="frame" x="194" y="24" width="188" height="21"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="기타정보" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rgl-bF-EaV">
+                                                <rect key="frame" x="194" y="82" width="188" height="21"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                         </subviews>
@@ -328,7 +345,9 @@
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="altitude" destination="mN2-Mv-UCG" id="XCL-MH-Cyu"/>
                         <outlet property="currentSpeed" destination="CHt-G3-k4i" id="I6l-xV-nf3"/>
+                        <outlet property="etc" destination="rgl-bF-EaV" id="qPf-9d-nmS"/>
                         <outlet property="exerciseLabel" destination="311-1s-eIZ" id="dZe-gn-ING"/>
                         <outlet property="goalDistance" destination="VsE-p2-MPe" id="26h-6R-5Zr"/>
                         <outlet property="goalTime" destination="JBd-lL-zBW" id="kgK-IG-DGk"/>
