--- a/RankFit/Exercise/ExerciseList/saveExercise/saveExercise.storyboard
+++ b/RankFit/Exercise/ExerciseList/saveExercise/saveExercise.storyboard
@@ -319,7 +319,7 @@
                                                             <constraint firstAttribute="width" constant="50" id="5CN-3A-np2"/>
                                                         </constraints>
                                                         <fontDescription key="fontDescription" type="system" weight="medium" pointSize="20"/>
-                                                        <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="decimalPad" smartDashesType="no" smartInsertDeleteType="no" smartQuotesType="no"/>
+                                                        <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="numberPad" smartDashesType="no" smartInsertDeleteType="no" smartQuotesType="no"/>
                                                     </textField>
                                                 </subviews>
                                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
